[project]
name = "bdline_pmtiles"
version = "0.0.0"
description = ""
authors = [{name = "chris48s"}]
license = "MIT"
readme = "README.md"
requires-python = "~=3.10"

[tool.poetry.group.dev.dependencies]
isort = "==7.0.0"
flake8 = "==7.3.0"
black = "==25.9.0"
pytest = "==9.0.0"
pytest-cov = "==7.0.0"

[project.urls]
Home = "https://github.com/chris48s/bdline_pmtiles"
Source = "https://github.com/chris48s/bdline_pmtiles"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
